--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 EasyCookie TODO
 ===============
-[ ] EasyCookie.keys (full list of keys)
+[x] EasyCookie.keys (full list of keys)
+[ ] Ext.ux wrapper
