--- a/README
+++ b/README
@@ -3,8 +3,8 @@ EasyCookie 0.2.1 README
 
 Simple JavaScript cookie handling API.  
 
-Usage
-=====
+Using EasyCookie
+================
 Get a cookie:
 
   val = EasyCookie.get('some_key');
