--- a/README
+++ b/README
@@ -1,7 +1,11 @@
 EasyCookie 0.2.1 README
 =======================
 
-Simple JavaScript cookie handling API.  
+Simple JavaScript cookie library.  EasyCookie is licensed under the
+revised BSD license; please see the file COPYING for details.  The
+latest version of EasyCookie can be found at
+
+  http://pablotron.org/software/easy-cookie
 
 Using EasyCookie
 ================
